student_handler added.

--- a/Project2/Makefile
+++ b/Project2/Makefile
@@ -1,12 +1,16 @@
 
 
-all: one two
+all: meanCalculator.out class_handler.out student_handler.out
 
-one : meanCalculator.cpp
+meanCalculator.out : meanCalculator.cpp
 	g++ -std=c++17 meanCalculator.cpp -o meanCalculator.out
 
-two : class_handler.cpp
+ class_handler.out : class_handler.cpp
 	g++ -std=c++17 class_handler.cpp -o class_handler.out
+
+student_handler.out : student_handler.cpp
+	g++ -std=c++17 student_handler.cpp -o student_handler.out
+
 
 
 clean:
