--- a/Project2/.vscode/settings.json
+++ b/Project2/.vscode/settings.json
@@ -2,6 +2,13 @@
     "files.associations": {
         "iostream": "cpp",
         "filesystem": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "ostream": "cpp",
+        "*.tcc": "cpp",
+        "sstream": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp"
     }
 }
